# project-stone

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
code/: CMakeLists.txt
code/game/: CMakeLists.txt
code/game/core/: CMakeLists.txt  headers.hpp  main.cpp  map.cpp  map.hpp  map_builder.cpp  map_builder.hpp  map_tile.hpp  map_tile_positions.hpp  map_tile_type.hpp  private.hpp
code/game/core/map/: tile.hpp  tile_orientation.hpp  tile_type.hpp
libraries/: CMakeLists.txt
libraries/glad/: glad.cpp
libraries/glad/include/glad/: glad.h
libraries/stb/: CMakeLists.txt
modules/: CMakeLists.txt
resources/shaders/: default_base_texture_shader.frag  default_base_texture_shader.vert
