#======================================================================================================================
cmake_minimum_required(VERSION 3.30)
#======================================================================================================================
project(project-stone)
#======================================================================================================================
add_subdirectory(libraries)
#======================================================================================================================
add_subdirectory(modules)
#======================================================================================================================
add_subdirectory(code)
#======================================================================================================================
