#=======================================================================================================================
               add_library(stb)
#=======================================================================================================================
target_include_directories(stb PUBLIC .)
            target_sources(stb PUBLIC stb.cpp)
#=======================================================================================================================
